sass/etna.scss
@use "@nationalarchives/frontend/nationalarchives/tools/media";

/*

==============
Toolkit styles
==============

When a change to a toolkit is required, change it in the toolkit SASS file. In this way we can perform a diff between
any candidate styles created for Etna and those within the toolkit. If we were to use @extend it will be harder to
identify how the code is intended to change.

This was discussed in an Etna developers meeting on 5 July 2021.

*/

@import "tna-toolkit/tna-toolkit";

/*

==============
Etna styles
==============

These are Etna specific components, created using BEM and following our guidelines.

*/

@import "includes/functions";
@import "includes/variables";
@import "includes/mixins";
@import "includes/global";
@import "includes/buttons";
@import "includes/generic-intro";
@import "includes/hero-image";
@import "includes/jumplinks";
@import "includes/links";
@import "includes/typography";
@import "includes/card-groups";
@import "includes/footer";
@import "includes/cta-banner-newsletter";
@import "includes/cta-banner-survey";
@import "includes/pagination";
@import "includes/alert-message";
@import "includes/image-viewer";
@import "includes/image-browse";
@import "includes/ie11";
@import "includes/hierarchy-global-nav";
@import "includes/hierarchy-local-nav";
@import "includes/key-facts";
@import "includes/image-viewer-panel";
@import "includes/article";
@import "includes/record-access-options";
@import "includes/record-details";
@import "includes/taxonomy-tags";
@import "includes/record-title";
@import "includes/specifics";
@import "includes/content-block";
@import "includes/content-warning";
@import "includes/quote";
@import "includes/featured-link";
@import "includes/featured-record";
@import "includes/featured-records";
@import "includes/record-links";
@import "includes/featured-article";
@import "includes/featured-articles";
@import "includes/media-embed";
@import "includes/record-embed";
@import "includes/record-embed__no-image";
@import "includes/related-resources";
@import "includes/related-ce-content";
@import "includes/blog-embed";
@import "includes/related-content";
@import "includes/section-separator";
@import "includes/disambiguation-explanation";
@import "includes/login-status";
@import "includes/forms";
@import "includes/xslt-patches";
@import "includes/record-related-records";
@import "includes/record-related-content";
@import "includes/search/search-button";
@import "includes/search/search-results";
@import "includes/search/search-results-hero";
@import "includes/search/search-buckets";
@import "includes/search/search-sort-view";
@import "includes/search/search-filters";
@import "includes/search/catalogue-search-grid";
@import "includes/search/search-results__list-card";
@import "includes/search/global-search";
@import "includes/search/search-landing-hero";
@import "includes/search/search-landing-buckets";
@import "includes/search/featured-search";
@import "includes/search/long-filters";
@import "includes/sub-heading";
@import "includes/cookie-consent";
@import "includes/maintenance-503";
@import "includes/beta-banner";
@import "includes/record-cta-panel";
@import "includes/record-series-panel";
@import "includes/home-refresh";
@import "includes/explore-intro";
@import "includes/record-matters";
@import "includes/transcription";
@import "includes/card-grid";
@import "includes/new_cards";
@import "includes/highlight-gallery";
@import "includes/highlight-cards";
// @import "includes/highlight-intro";
@import "includes/utilities";
@import "includes/archive-description";
@import "includes/archive-collections";
@import "includes/archive-additional-resources";
@import "includes/related-highlight-cards";
@import "includes/highlight-gallery-teaser";
@import "includes/feedback";
@import "includes/promoted-pages";
@import "includes/featured-record-article";
@import "includes/record-crosslink-panel";
@import "includes/image-block";
@import "includes/password-page";
@import "includes/record-creator-description";
@import "includes/record-creator-collections";

/* Un-comment when front-end toolkit is fixed

==============
New styles
==============

Modified to match the existing site (for now)

*/

$largest-small-device: 992px;

@import "@nationalarchives/frontend/nationalarchives/all";

.tna-breadcrumbs {
    margin-bottom: 2rem;
}

.tna-hero {
    margin-bottom: 2rem;
}

.tna-hero__heading {
    margin-top: 0;
    margin-bottom: 0.75rem;

    font-size: 4rem;
    line-height: 1.22;
    font-weight: 700;

    @include media.on-mobile {
        font-size: 2.25rem;
        line-height: 1.33;
    }
}

.tna-hero__body {
    font-size: 1.25rem;

    @include media.on-mobile {
        font-size: 1rem;
        line-height: 1.5;
    }

    p {
        margin-bottom: 0;
    }
}

.tna-message {
    margin-top: 2rem;
    margin-bottom: 3rem;
}

.template-focused-article {
    .tna-breadcrumbs__wrapper {
        // ELEMENT SPECIFIC TO THIS SITE
        background-color: #343338 !important;
    }
    .tna-breadcrumbs {
        margin-bottom: 0;
        color: #fff !important;

        a {
            color: inherit !important;
        }
    }

    .generic-intro {
        .tna-heading {
            padding-top: 1rem;
            color: #fff !important;
        }
    }

    .generic-intro__meta {
        padding-top: 1rem;
        padding-bottom: 4rem;
    }

    @include media.on-larger-than-mobile {
        .tna-header__navigation-item-link:hover,
        .tna-header__navigation-item-link:hover:link,
        .tna-header__navigation-item-link:hover:visited,
        .tna-header__navigation-item-link--selected,
        .tna-header__navigation-item-link--selected:link,
        .tna-header__navigation-item-link--selected:visited {
            color: #fff !important;
            background-color: #343338 !important;
        }
    }
}

.card-group-secondary-nav,
.generic-intro__paragraph {
    margin-bottom: 2rem;
}

.container + .container {
    margin-top: 2rem;
}

.featured-article__description,
.article-container__main,
.container,
.search-landing-buckets__link,
.search-buckets__link,
.search-results-hero__form-search-box,
.search-filters__search,
[class^="col-"],
[class*=" col-"] {
    box-sizing: border-box;
}

